add tty console.log

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+version 0.0.6
+- added basic joystick support (tested on logitech F310)
+- fix select key
+
 version 0.0.5
 - fix typo with arm nexe path in manifest
 
